--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:7000/api",
+  "proxy": "http://localhost:7000/",
   "eslintConfig": {
     "extends": "react-app"
   },
